# PhysarumSim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.toml  vcpkg-configuration.json  vcpkg.json
configs/: config.toml  imgui.ini
include/geGL/: AsynchronousQuery.cpp  Buffer.h  DSATableDecorator.h  DefaultLoader.h  FunctionLoaderInterface.h  LoaderTableDecorator.h  OpenGL.h  OpenGLCapabilities.h  OpenGLContext.h  Program.h  ProgramInfo.h  ProgramPipeline.h  Renderbuffer.cpp  Sampler.cpp  Texture.h  VertexArray.cpp  VertexArray.h  geGL.h
include/geGL/private/: BufferImpl.h  VertexArrayImpl.h  global.h
include/glad/: glad.h
resources/help/: controls_overview.md  help.toml  image_controls.md  info_controls.md  interaction_controls.md  introduction.md  sim_time_controls.md  species_controls.md
resources/licenses/: PhysarumSim  StaticTypeInfo  magic_enum
resources/shaders/: diffuse_trail.comp  physarum_render.comp  physarum_sim.comp  render.frag
src/: GlobalThreadpool.h  app_icon.h  glad.c  main.cpp
src/geGL/: AsynchronousQuery.cpp  AsynchronousQuery.h  Buffer.cpp  Buffer.h  CapabilitiesTableDecorator.h  DSATableDecorator.h  DebugMessage.cpp  DebugMessage.h  DefaultLoader.h  Definitions.h  Framebuffer.cpp  Framebuffer.h  Fwd.h  GLSLNoise.cpp  GLSLNoise.h  LoaderTableDecorator.h  OpenGLObject.cpp  OpenGLObject.h  OpenGLUtil.cpp  OpenGLUtil.h  Program.cpp  Program.h  ProgramInfo.h  ProgramPipeline.cpp  Renderbuffer.cpp  Renderbuffer.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TrapTableDecorator.h  VertexArray.cpp  VertexArray.h
src/geGL/private/: BufferImpl.cpp  ProgramImpl.h  ShaderImpl.h  VertexArrayImpl.cpp
src/images/: Formats.h  VideoRecorder.cpp  VideoRecorder.h  save.cpp  save.h
src/renderers/: DemoRenderer.cpp  DemoRenderer.h  PhysarumRenderer.cpp  PhysarumRenderer.h  Renderer.h
src/shaders/: diffuse_trail.comp  greyscale.comp  physarum_render.comp  physarum_sim.comp  render.vert  simple_shader.frag  simple_shader.vert  sobel.comp
src/simulation/: ImgTransform.cpp  ImgTransform.h  Particle.h  PhysarumSimulator.cpp  PhysarumSimulator.h  SimConfig.cpp  SimConfig.h
src/simulation/generators/: InwardCircleParticleGenerator.cpp  InwardCircleParticleGenerator.h  ParticleGenerator.h  PointParticleGenerator.cpp  PointParticleGenerator.h  RandomCircleParticleGenerator.cpp  RandomCircleParticleGenerator.h  RandomParticleGenerator.cpp  RandomParticleGenerator.h  UniformParticleGenerator.cpp  UniformParticleGenerator.h
src/ui/: AboutPanel.cpp  AboutPanel.h  DemoImGui.cpp  DemoImGui.h  HelpPanel.cpp  HelpPanel.h  MouseInteractionPanel.cpp  MouseInteractionPanel.h  RecorderPanel.cpp  RecorderPanel.h  SimulationControlsPanel.cpp  SimulationControlsPanel.h  SpeciesColorPanel.cpp  SpeciesColorPanel.h  SpeciesInteractionListbox.cpp  SpeciesInteractionListbox.h  SpeciesPanel.cpp  SpeciesPanel.h  UI.cpp  UI.h
src/ui/about_data/: AboutData.h  AboutDataLoader.h  FolderAboutDataLoader.cpp  FolderAboutDataLoader.h
src/ui/help_data/: FolderHelpLoader.cpp  FolderHelpLoader.h  HelpData.h  HelpLoader.h
src/utils/: FPSCounter.cpp  FPSCounter.h  files.cpp  files.h  rand.h
